{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "da0a48d0-c7da-4ea9-bf0b-eba4ae66e247",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "9e11abdc-d19e-4507-a6a2-8d6b0e83cea5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "56bd6b65-1488-4ba9-b9cf-d816731c4ecf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "TouchDelta",
                    "type": "PassThrough",
                    "id": "316b5b2b-fcd9-46fb-9fbf-3f9e2d14adae",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Keyboard",
                    "type": "Button",
                    "id": "c9486aa6-3c8f-4722-9bad-8fd573cd1692",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ee4a28c0-1ce0-45f2-b3c0-67fd73856d5d",
                    "path": "<Touchscreen>/primaryTouch/phase",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c24c621-c3ea-4237-9e91-28ba8c1c7162",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "42651fa7-ed27-4fab-b28b-d114adb427f4",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "73068a53-3ede-43ca-ade4-15915b2ae749",
                    "path": "<Keyboard>/#(F)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Keyboard",
            "id": "e9baf989-c691-4100-b616-84842be85837",
            "actions": [
                {
                    "name": "FireInput",
                    "type": "Button",
                    "id": "32a58b9b-4cbe-46e3-9d18-ca74ebcd525f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9e31e01f-a139-459a-bbc2-1aeb40dfd2ef",
                    "path": "<Keyboard>/#(F)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FireInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}